<resources>
    <string name="app_name">Movie Database</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="btn_retry">Retry</string>
    <string name="tv_result_error">Result could not be loaded</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>


    <string name="user_type">User Type</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="dummy_followings">100</string>
    <string name="following">Following</string>
    <string name="dummy_followers">80</string>
    <string name="followers">Follower</string>
    <string name="delete_movie_favorite">Removed from favorite</string>
    <string name="add_movie_favorite">Added to favorite</string>
    <string name="back_button">Back Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="read_reviews"><u>Read Reviews</u></string>
    <string name="watch_trailer"><u>Watch Trailer</u></string>
    <string name="message_undo">Cancel delete?</string>
    <string name="message_ok">OK</string>
    <string name="no_favorite_movie">No favorite User</string>
    <string name="back_to_exit">Press back again to exit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_user_found">No Movie Found</string>
    <string name="data_not_found">Data not found</string>
    <string name="comment">Comment</string>
    <string name="created_at">Created at</string>
</resources>