<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_blue">

    <!-- Background -->
    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0"
        android:layout_marginTop="@dimen/dimens_16"
        android:background="@drawable/bg_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Icon Back -->
    <ImageButton
        android:id="@+id/ic_back"
        android:layout_width="@dimen/dimens_35"
        android:layout_height="@dimen/dimens_35"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_48"
        android:background="@drawable/bg_backbutton"
        android:scaleType="centerInside"
        android:padding="@dimen/dimens_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/black" />


    <!-- User Avatar -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimens_200"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_back"
        app:layout_constraintVertical_bias="0.0"
        app:riv_corner_radius="@dimen/dimens_12"
        tools:src="@drawable/ic_launcher_background" />

    <!-- UserName -->
    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        tools:text="@string/username" />

    <!-- Email -->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_28"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        tools:text="@string/email" />

    <!-- User Type -->
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_38"
        android:layout_marginEnd="@dimen/dimens_16"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        tools:text="@string/user_type" />

    <!-- Company -->
    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_28"
        android:layout_marginEnd="@dimen/dimens_16"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        tools:text="@string/company" />

    <!-- User Followings -->
    <TextView
        android:id="@+id/tv_user_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20"
        android:textColor="@color/black"
        android:textSize="@dimen/font_22"
        app:layout_constraintEnd_toStartOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_background"
        tools:text="@string/dummy_followings" />

    <!-- Text Followings -->
    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toStartOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_following" />

    <!-- Line -->
    <View
        android:id="@+id/view_line"
        android:layout_width="@dimen/dimens_2"
        android:layout_height="@dimen/dimens_60"
        android:layout_marginTop="@dimen/dimens_20"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_background" />

    <!-- User Followers -->
    <TextView
        android:id="@+id/tv_user_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20"
        android:textColor="@color/black"
        android:textSize="@dimen/font_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_line"
        app:layout_constraintTop_toTopOf="@id/view_background"
        tools:text="@string/dummy_followers" />

    <!-- Text Followers -->
    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_line"
        app:layout_constraintTop_toBottomOf="@id/tv_user_follower" />


    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/loading_progress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Fab Favorite-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_32"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower"
        app:srcCompat="@drawable/ic_favorite_off" />


</androidx.constraintlayout.widget.ConstraintLayout>