<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/iv_avatar"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_view" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_250"
        android:scaleType="centerCrop"
        app:riv_corner_radius="@dimen/dimens_12"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_avatar"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_30"
        android:textColor="@color/black"
        android:textSize="@dimen/font_26"
        tools:text="Title" />

    <TextView
        android:id="@+id/tv_movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_title"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        tools:text="Genre" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_genre"
        android:layout_marginTop="@dimen/dimens_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_16"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                tools:text="Overview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16"
                android:divider="@drawable/empty_tall_divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/read_reviews"
                    android:textColor="@color/color5"
                    android:textSize="@dimen/font_18"
                    tools:text="@string/read_reviews" />

                <TextView
                    android:id="@+id/tv_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/watch_trailer"
                    android:textColor="@color/color5"
                    android:textSize="@dimen/font_18"
                    tools:text="@string/watch_trailer" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/ic_back"
        android:layout_width="@dimen/dimens_48"
        android:layout_height="@dimen/dimens_48"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_48"
        android:alpha="0.8"
        android:background="@drawable/bg_backbutton"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/dimens_10"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/black" />


    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/loading_progress"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/data_not_found"
        android:visibility="gone" />

    <!--    Fab Favorite-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_avatar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dimens_32"
        android:clickable="true"
        android:contentDescription="@string/favorite_button"
        android:focusable="true"
        app:srcCompat="@drawable/ic_favorite_off" />


</RelativeLayout>